--- a/app/templates/match.cfg
+++ b/app/templates/match.cfg
@@ -41,7 +41,7 @@
 	"team1"
 	{
 		"name"		"{{ team1.name }}" // You should always set a team name, otherwise some chat messages will not make sense. If there is no true team name, use "Team1" at least.
-		"tag"		"{{ team1.tags }}"  // Short tags replace the "clan tag" on the scoreboard. They are optional.
+		"tag"		"{{ team1.tag }}"  // Short tags replace the "clan tag" on the scoreboard. They are optional.
 		"flag"		"AT"
 		"logo"		"nv"
 		"players"
@@ -51,7 +51,7 @@
 			// but that is not recommended. You can also set player names that will be forced here.
 			// If you don't want to force player names, just use an empty quote "".
             {% for player in team1.players %}
-			"player.steamid"		"player.name"
+			"{{ player.steamid }}"		"{{ player.name }}"
             {% endfor %}
 		}
 	}
@@ -59,13 +59,13 @@
 	"team2"
 	{
 		"name"		"{{ team2.name }}"
-		"tag"		"{{ team2.tags }}"
+		"tag"		"{{ team2.tag }}"
 		"flag"		"AT"
 		"logo"		"fntc"
 		"players"
 		{
 			{% for player in team2.players %}
-			"player.steamid"		"player.name"
+			"{{ player.steamid }}"		"{{ player.name }}"
             {% endfor %}
 		}
 	}
