--- a/app/config.json
+++ b/app/config.json
@@ -4,6 +4,7 @@
     "port": 27015,
     "rcon_pw": "r4ugs00",
     "ssh_user": "joel",
+    "ssh_port": 5555,
     "ssh_path_to_conf_folder": "/home/steam/csgosl/csgosl/server/csgo/match_config"
   }
 ]
