--- a/app/templates/match.cfg
+++ b/app/templates/match.cfg
@@ -21,13 +21,13 @@
 
 	"maplist"
 	{
-		"cs_agency"		""
-		"de_ancient"		""
-		"workshop/austria/de_austria"		""
-		"workshop/bazaar/de_bazaar"		""
-		"de_dust2"		""
-		"de_inferno"		""
-		"de_mirage"		""
+		"cs_agency"		"Agency"
+		"de_ancient"		"Ancient"
+		"workshop/austria/de_austria"		"Austria"
+		"workshop/bazaar/de_bazaar"		"Bazaar"
+		"de_dust2"		"Dust 2"
+		"de_inferno"		"Inferno"
+		"de_mirage"		"Mirage"
 	}
 
 	"players_per_team"		"5"
