number of maps played can now be specified

--- a/app/templates/match.cfg
+++ b/app/templates/match.cfg
@@ -1,7 +1,7 @@
 "Match"
 {
 	"matchid"		"{{ matchname }}"
-	"num_maps"		"3" // Must be an odd number or 2. 1->Bo1, 2->Bo2, 3->Bo3, etc.
+	"num_maps"		"{{ mapnumbers }}" // Must be an odd number or 2. 1->Bo1, 2->Bo2, 3->Bo3, etc.
 
 	"spectators" // players allowed in spectator (e.g., admins) should go here
 	{
@@ -23,8 +23,8 @@
 	{
 		"cs_agency"		"Agency"
 		"de_ancient"		"Ancient"
-		"workshop/austria/de_austria"		"Austria"
-		"workshop/bazaar/de_bazaar"		"Bazaar"
+		"workshop/727462766/de_austria"		"Austria"
+		"workshop/22515817/de_bazaar"		"Bazaar"
 		"de_dust2"		"Dust 2"
 		"de_inferno"		"Inferno"
 		"de_mirage"		"Mirage"
