--- a/app/templates/match.cfg
+++ b/app/templates/match.cfg
@@ -23,8 +23,8 @@
 	{
 		"cs_agency"		"Agency"
 		"de_ancient"		"Ancient"
-		"workshop/727462766/de_austria"		"Austria"
-		"workshop/22515817/de_bazaar"		"Bazaar"
+		"workshop/austria/de_austria"		""
+		"workshop/bazaar/de_bazaar"		""
 		"de_dust2"		"Dust 2"
 		"de_inferno"		"Inferno"
 		"de_mirage"		"Mirage"
