more work one database manager and new data layout error pages are now also working with fastapi changed readme to include new instructions and banned players

--- a/app/templates/match.cfg
+++ b/app/templates/match.cfg
@@ -7,9 +7,7 @@
 	{
 		"players"
 		{
-			"STEAM_1:1:....."		""
-			"STEAM_1:1:....."		""
-			"STEAM_1:1:....."		""
+			//"STEAM_1:1:....."		""
 		}
 	}
 
@@ -22,11 +20,11 @@
 	"maplist"
 	{
 		"cs_agency"		"Agency"
-		"de_ancient"		"Ancient"
-		"workshop/austria/de_austria"		""
-		"workshop/bazaar/de_bazaar"		""
+		"de_ancient"	"Ancient"
+		"de_cbble" 		"Cobblestone"
+		"de_tuscan" 	"Tuscan"
 		"de_dust2"		"Dust 2"
-		"de_inferno"		"Inferno"
+		"de_inferno"	"Inferno"
 		"de_mirage"		"Mirage"
 	}
 
@@ -74,6 +72,6 @@
 	// You should not use this as a replacement for the cfg/get5/live.cfg config.
 	"cvars"
 	{
-		"hostname"		"AIRLAN21 Server #{{ serverid }}"
+		"hostname"		"Server - {{ matchname }}"
 	}
 }
