started working on telegram bot MatchGen is now able to generate match configs from team ids

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,11 @@ services:
       - ./teams.json:/app/teams.json
     ports:
       - 80:80
+  telegram_bot:
+    depends_on:
+      - csgo_manager
+    build:
+      context: telegram_bot
+      dockerfile: Dockerfile
+    env_file:
+      - telegram_bot/.env
