status page is working again and displaying information about the started csgo servers fixed a bug in the rcon connection, which would make exiting the with block throw an exception

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - ./gslt.json:/app/gslt.json
     ports:
       - 80:80
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   telegram_bot:
     depends_on:
       - csgo_manager
