--- a/get5_image/Dockerfile
+++ b/get5_image/Dockerfile
@@ -88,8 +88,8 @@ COPY --chown=user --chmod=755 server-scripts/server-launch.sh $HOME_DIR/
 ################
 COPY --chown=user cfg/* $CSGO_DIR/csgo/cfg/
 
-# FORCE MANUAL UPDATE IN CONTAINER #1
-RUN su user -c "bash $HOME_DIR/server-update.sh"
+# FORCE MANUAL UPDATE IN CONTAINER
+RUN su user -c "bash $HOME_DIR/server-update.sh" && echo "1"
 
 ############
 # RUN CSGO #
