added csgo_event handler for uploading demo docker container is not shut down after the demo is uploaded added endpoint to upload a demo and save it in a docker volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./teams.json:/app/teams.json
       - ./gslt.json:/app/gslt.json
+      - demofiles:/demofiles
     ports:
       - 80:80
     extra_hosts:
@@ -32,3 +33,5 @@ services:
       dockerfile: Dockerfile
     env_file:
       - telegram_bot/.env
+volumes:
+  demofiles:
