added backup endpoints to the api added backup loading to the frontend

--- a/docker-compose-master.yml
+++ b/docker-compose-master.yml
@@ -23,6 +23,7 @@ services:
       - ./teams.json:/app/teams.json
       - ./gslt.json:/app/gslt.json
       - ./demofiles:/demofiles
+      - ./backupfiles:/backupfiles
     ports:
       - 80:80
     extra_hosts:
