added new passwords to rcon, gotv and db connections started documenting different env variables that need to be set to secure the api started using gunicorn to have multiple workers running on one instance

--- a/docker-compose-master.yml
+++ b/docker-compose-master.yml
@@ -28,6 +28,8 @@ services:
       - 80:80
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    environment:
+      - MAX_WORKERS=10
   telegram_bot:
     depends_on:
       - csgo_manager
