switched caching backend from memcached to redis update stats events are now randomized in their animation added new stats: friendly_fire, player_flashed, friendly_flash and headshot_kills

--- a/docker-compose-master.yml
+++ b/docker-compose-master.yml
@@ -12,9 +12,13 @@ services:
     restart: unless-stopped
     ports:
       - 8080:8080
+  redis:
+    image: redis:7-alpine
+    restart: unless-stopped
   csgo_manager:
     depends_on:
       - db
+      - redis
     build:
       context: .
       dockerfile: Dockerfile
