added postgres env file

--- a/docker-compose-master.yml
+++ b/docker-compose-master.yml
@@ -3,10 +3,10 @@ services:
   db:
     image: postgres
     restart: unless-stopped
-    environment:
-      POSTGRES_PASSWORD: pass
     ports:
       - 5432:5432
+    env_file:
+      - postgres.env
   adminer:
     image: adminer
     restart: unless-stopped
