--- a/docker-compose-master.yml
+++ b/docker-compose-master.yml
@@ -7,6 +7,8 @@ services:
       - 5432:5432
     env_file:
       - postgres.env
+    volumes:
+      - ./db:/var/lib/postgresql/data
   pgbackups:
     image: prodrigestivill/postgres-backup-local
     restart: always
