--- a/docker-compose-master.yml
+++ b/docker-compose-master.yml
@@ -1,18 +1,18 @@
 version: '3'
 services:
   db:
-    image: postgres
+    build:
+      context: app/utils/postgres
+      dockerfile: Dockerfile
     restart: unless-stopped
     ports:
       - 5432:5432
     env_file:
-      - postgres.env
-    volumes:
-      - ./db:/var/lib/postgresql/data
+      - app/utils/postgres/postgres.env
   pgbackups:
     image: prodrigestivill/postgres-backup-local
     restart: always
-    user: postgres:postgres # Optional: see below
+    user: postgres:postgres
     volumes:
       - /var/opt/pgbackups:/backups
     links:
@@ -30,7 +30,7 @@ services:
       - BACKUP_KEEP_MONTHS=6
       - HEALTHCHECK_PORT=8080
     env_file:
-      - postgres.env
+      - app/utils/postgres/postgres.env
   adminer:
     image: adminer
     restart: unless-stopped
@@ -48,7 +48,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./teams.json:/app/teams.json
       - ./gslt.json:/app/gslt.json
       - ./demofiles:/demofiles
       - ./backupfiles:/backupfiles
@@ -57,7 +56,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
-      - MAX_WORKERS=1 # TODO: fix the loading of the sql schema and then scale this correctly again
+      - MAX_WORKERS=10
     env_file:
       - ./master.env
   telegram_bot:
