--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "app/utils"]
 	path = app/utils
-	url = https://github.com/itssme/airlan-utils
+	url = git@github.com:itssme/airlan-utils.git
