--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,24 +1,31 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.11
+FROM python:3.11 AS builder
 
-WORKDIR /
-
-COPY requirements.txt requirements.txt
-
-RUN apt update && apt install libpq-dev npm -y
-RUN pip install --no-cache-dir --upgrade -r requirements.txt
-
-WORKDIR /app/static
-RUN npm install -D tailwindcss
-RUN npx tailwindcss init
-RUN npm install tw-elements
-WORKDIR /
-
-COPY . app
-
-WORKDIR /app/static/
-
-RUN npx tailwindcss -i /app/static/css/input.css -o /app/static/css/output.css
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
+RUN apt install libpq-dev nodejs -y
 
 WORKDIR /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade --user -r requirements.txt
 
-EXPOSE 80 80
+WORKDIR /app/static
+RUN npm install -D tailwindcss tw-elements
+
+COPY ./static/css /app/static/css
+COPY ./static/tailwind.config.js /app/static/tailwind.config.js
+COPY ./templates /app/templates
+RUN npx tailwindcss -c /app/static/tailwind.config.js -i /app/static/css/input.css -o /app/static/css/output.css
+
+FROM python:3.11-slim
+
+RUN apt-get update && apt-get install libpq-dev -y && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+COPY --from=builder /root/.local /root/.local
+COPY --from=builder /app/static/css /app/static/css
+COPY --from=builder /app/static/node_modules/tw-elements /app/static/node_modules/tw-elements
+ENV PATH=/root/.local/bin:$PATH
+ENV GUNICORN_CMD_ARGS=--preload
+
+COPY . .
+
+ENTRYPOINT ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
