--- a/Dockerfile_worker
+++ b/Dockerfile_worker
@@ -2,13 +2,16 @@ FROM tiangolo/uvicorn-gunicorn-fastapi:python3.11
 
 WORKDIR /
 
-COPY requirements.txt requirements.txt
+COPY webserver/requirements.txt requirements.txt
 
 RUN apt update && apt install libpq-dev -y
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
-COPY . app
+COPY worker/ app
+COPY webserver/endpoints/ app/endpoints
+COPY webserver/utils/ app/utils
 
 WORKDIR /app
 
-EXPOSE 80 80
+ENV PORT=8080
+EXPOSE 8080 8080
