--- a/docker-compose-worker.yml
+++ b/docker-compose-worker.yml
@@ -1,17 +1,15 @@
 version: '3'
 services:
-  csgo_manager:
+  csgo_worker:
     build:
       context: .
-      dockerfile: app/Dockerfile
+      dockerfile: Dockerfile_worker
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./teams.json:/app/teams.json
       - ./gslt.json:/app/gslt.json
     ports:
-      - 80:80
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - 5000:5000
     environment:
       - MAX_WORKERS=10
     env_file:
