--- a/docker-compose-worker.yml
+++ b/docker-compose-worker.yml
@@ -10,6 +10,8 @@ services:
       - ./gslt.json:/app/gslt.json
     ports:
       - 5000:5000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       - MAX_WORKERS=10
     env_file:
