fixed multiple errors when starting a new game

--- a/get5_image/Dockerfile
+++ b/get5_image/Dockerfile
@@ -59,9 +59,8 @@ RUN apt-get -qq update \
        "mkdir $CSGO_DIR \
        && bash $HOME_DIR/server-update.sh"
 
-# NOTE: For Get5 we currently have to use a nighly build of version v0.12.0, because of: https://github.com/splewis/get5/issues/934
-ENV METAMOD_URL=https://mms.alliedmods.net/mmsdrop/1.12/mmsource-1.12.0-git1164-linux.tar.gz \
-    SOURCEMOD_URL=https://sm.alliedmods.net/smdrop/1.12/sourcemod-1.12.0-git6936-linux.tar.gz \
+ENV METAMOD_URL=https://mms.alliedmods.net/mmsdrop/1.11/mmsource-1.11.0-git1148-linux.tar.gz \
+    SOURCEMOD_URL=https://sm.alliedmods.net/smdrop/1.11/sourcemod-1.11.0-git6934-linux.tar.gz \
     STEAMWORKS_URL=https://github.com/KyleSanderson/SteamWorks/releases/download/1.2.3c/package-lin.tgz \
     GET5_URL=https://github.com/splewis/get5/releases/download/v0.14.7/get5-v0.14.7.tar.gz
 
@@ -100,6 +99,9 @@ COPY --chown=user cfg/* $CSGO_DIR/csgo/cfg/
 
 # FORCE MANUAL UPDATE IN CONTAINER, simply increment the number on the echo command, this is not very clever or a good solution but, well... it works
 RUN su user -c "bash $HOME_DIR/server-update.sh" && echo "3"
+
+RUN echo '"STEAM_0:0:64160074" "99:z"' >> $CSGO_DIR/csgo/addons/sourcemod/configs/admins_simple.ini \
+    && echo '"STEAM_0:1:124584389" "99:z"' >> $CSGO_DIR/csgo/addons/sourcemod/configs/admins_simple.ini
 
 ############
 # RUN CSGO #
