--- a/Dockerfile_worker
+++ b/Dockerfile_worker
@@ -2,7 +2,7 @@ FROM tiangolo/uvicorn-gunicorn-fastapi:python3.11
 
 WORKDIR /
 
-COPY webserver/requirements.txt requirements.txt
+COPY worker/requirements.txt requirements.txt
 
 RUN apt update && apt install libpq-dev -y
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
