--- a/docker-compose-webserver.yml
+++ b/docker-compose-webserver.yml
@@ -33,11 +33,14 @@ services:
     environment:
       - MAX_WORKERS=10
       - STEAM_KEY=${STEAM_KEY}
-  telegram_bot:
-    depends_on:
-      - csgo_manager
+      - ACCESS_SECRET_KEY=${ACCESS_SECRET_KEY}
+  matchmaker:
     build:
-      context: telegram_bot
-      dockerfile: Dockerfile
-    env_file:
-      - telegram_bot/.env
+      context: .
+      dockerfile: Dockerfile_matchmaker
+    ports:
+      - 5000:5000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      - ACCESS_SECRET_KEY=${ACCESS_SECRET_KEY}
