--- a/docker-compose-webserver.yml
+++ b/docker-compose-webserver.yml
@@ -38,9 +38,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile_matchmaker
-    ports:
-      - 5000:5000
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
       - ACCESS_SECRET_KEY=${ACCESS_SECRET_KEY}
+    env_file:
+      - ./csgo_host.env
