--- a/get5_image/Dockerfile
+++ b/get5_image/Dockerfile
@@ -1,10 +1,10 @@
 ###############################################
-#        csgo-get5-docker Dockerfile          #
+#        cs2-get5-docker Dockerfile          #
 ###############################################
-##  Docker image containing CSGO with Get5   ##
+##  Docker image containing cs2 with Get5   ##
 ##      plugin for setting up matches        ##
 ###############################################
-#    github.com/theo-brown/csgo-get5docker    #
+#    github.com/theo-brown/cs2-get5docker    #
 ###############################################
 
 FROM debian:bullseye-slim
@@ -15,22 +15,22 @@ FROM debian:bullseye-slim
 RUN useradd -m user
 
 ################
-# INSTALL CSGO #
+# INSTALL cs2 #
 ################
 # Copy install script
 # Install prerequisites
-#   ca-certificates: required to trust downloads from the internet, including running csgo
+#   ca-certificates: required to trust downloads from the internet, including running cs2
 #   wget: used to download steam and plugins
 #   lib32stdc++6: required for source plugins
 #   unzip: required to unzip get5
 #   rsync: required to merge get5 directories
 # Create directories
 # Install SteamCMD
-# Install CSGO
+# Install cs2
 # Install plugins
 # Clean up
 ENV HOME_DIR=/home/user \
-    CSGO_DIR=/home/user/csgo-server
+    cs2_DIR=/home/user/cs2-server
 
 WORKDIR $HOME_DIR
 
@@ -56,7 +56,7 @@ RUN apt-get -qq update \
         unzip \
         rsync \
     && su user -c  \
-       "mkdir $CSGO_DIR \
+       "mkdir $cs2_DIR \
        && bash $HOME_DIR/server-update.sh"
 
 # starting from GET5 v0.13, the veto system uses in game chat instead of a handy menu...
@@ -66,12 +66,12 @@ ENV METAMOD_URL=https://mms.alliedmods.net/mmsdrop/1.12/mmsource-1.12.0-git1167-
     GET5_URL=https://github.com/splewis/get5/releases/download/v0.12.1/get5-v0.12.1.tar.gz
 
 RUN su user -c  \
-       "wget -q -O - $METAMOD_URL | tar -xz -C $CSGO_DIR/csgo \
-       && wget -q -O - $SOURCEMOD_URL | tar -xz -C $CSGO_DIR/csgo \
+       "wget -q -O - $METAMOD_URL | tar -xz -C $cs2_DIR/cs2 \
+       && wget -q -O - $SOURCEMOD_URL | tar -xz -C $cs2_DIR/cs2 \
        && wget -q -O get5.tar.gz $GET5_URL \
        && tar -xzf get5.tar.gz \
-       && rsync -aq addons/ $CSGO_DIR/csgo/addons \
-       && rsync -aq cfg/ $CSGO_DIR/csgo/cfg \
+       && rsync -aq addons/ $cs2_DIR/cs2/addons \
+       && rsync -aq cfg/ $cs2_DIR/cs2/cfg \
        && rm -rf addons cfg get5.zip"
 
 # steamworks:
@@ -79,7 +79,7 @@ RUN su user -c \
       "wget -q -O steamworks.tar.gz $STEAMWORKS_URL \
       && mkdir steamworks \
       && tar -xzf steamworks.tar.gz -C steamworks \
-      && rsync -aq steamworks/package/addons/ $CSGO_DIR/csgo/addons"
+      && rsync -aq steamworks/package/addons/ $cs2_DIR/cs2/addons"
 
 RUN apt install gdb -y
 
@@ -96,16 +96,16 @@ COPY --chown=user --chmod=755 server-scripts/server-launch.sh $HOME_DIR/
 ################
 # COPY CONFIGS #
 ################
-COPY --chown=user cfg/* $CSGO_DIR/csgo/cfg/
+COPY --chown=user cfg/* $cs2_DIR/cs2/cfg/
 
 # FORCE MANUAL UPDATE IN CONTAINER, simply increment the number on the echo command, this is not very clever or a good solution but, well... it works
 RUN su user -c "bash $HOME_DIR/server-update.sh" && echo "1"
 
-RUN echo '"STEAM_0:0:64160074" "99:z"' >> $CSGO_DIR/csgo/addons/sourcemod/configs/admins_simple.ini \
-    && echo '"STEAM_0:1:124584389" "99:z"' >> $CSGO_DIR/csgo/addons/sourcemod/configs/admins_simple.ini
+RUN echo '"STEAM_0:0:64160074" "99:z"' >> $cs2_DIR/cs2/addons/sourcemod/configs/admins_simple.ini \
+    && echo '"STEAM_0:1:124584389" "99:z"' >> $cs2_DIR/cs2/addons/sourcemod/configs/admins_simple.ini
 
 ############
-# RUN CSGO #
+# RUN cs2 #
 ############
 ENV UPDATE_ON_LAUNCH=0
 USER user
