started working on new matchzy docker container docker container with cs2 inside is working

--- a/get5_image/Dockerfile
+++ b/get5_image/Dockerfile
@@ -1,112 +1,90 @@
-###############################################
-#        cs2-get5-docker Dockerfile          #
-###############################################
-##  Docker image containing cs2 with Get5   ##
-##      plugin for setting up matches        ##
-###############################################
-#    github.com/theo-brown/cs2-get5docker    #
-###############################################
+###########################################################
+# Dockerfile that builds a CS2 Gameserver
+###########################################################
 
-FROM debian:bullseye-slim
+# BUILD STAGE
 
-###############
-# CREATE USER #
-###############
-RUN useradd -m user
+FROM cm2network/steamcmd:root as build_stage
 
-################
-# INSTALL cs2 #
-################
-# Copy install script
-# Install prerequisites
-#   ca-certificates: required to trust downloads from the internet, including running cs2
-#   wget: used to download steam and plugins
-#   lib32stdc++6: required for source plugins
-#   unzip: required to unzip get5
-#   rsync: required to merge get5 directories
-# Create directories
-# Install SteamCMD
-# Install cs2
-# Install plugins
-# Clean up
-ENV HOME_DIR=/home/user \
-    cs2_DIR=/home/user/cs2-server
+ENV STEAMAPPID 730
+ENV STEAMAPP cs2
+ENV STEAMAPPDIR "${HOMEDIR}/${STEAMAPP}-dedicated"
 
-WORKDIR $HOME_DIR
+RUN set -x \
+	# Install, update & upgrade packages
+	&& apt-get update \
+	&& apt-get install -y --no-install-recommends --no-install-suggests \
+		wget \
+		ca-certificates \
+		lib32z1 \
+                simpleproxy \
+                libicu-dev \
+	&& mkdir -p "${STEAMAPPDIR}" \
+	# Clean up
+        && apt-get clean \
+        && find /var/lib/apt/lists/ -type f -delete
 
-COPY --chown=user --chmod=755 server-scripts/server-update.sh $HOME_DIR/
+# BASE
 
-RUN apt-get update && \
-    apt-get install -y software-properties-common && \
-    dpkg --add-architecture i386 && \
-    apt-add-repository non-free && \
-    apt-get update
+FROM build_stage AS bullseye-base
 
-RUN echo steam steam/question select "I AGREE" | debconf-set-selections && \
-    echo steam steam/license note '' | debconf-set-selections &&  \
-    DEBIAN_FRONTEND=noninteractive apt-get -q -y install steamcmd
+ENV CS2_SERVERNAME="cs2 private server" \
+    CS2_IP=0.0.0.0 \
+    CS2_SERVER_HIBERNATE=0 \
+    CS2_PORT=27015 \
+    CS2_RCON_PORT="" \
+    CS2_MAXPLAYERS=10 \
+    CS2_RCONPW="pass" \
+    CS2_PW="" \
+    CS2_MAPGROUP="mg_active" \
+    CS2_STARTMAP="cs_office" \
+    CS2_GAMEALIAS="" \
+    CS2_GAMETYPE=0 \
+    CS2_GAMEMODE=1 \
+    CS2_LAN=0 \
+    TV_AUTORECORD=0 \
+    TV_ENABLE=0 \
+    TV_PORT=27020 \
+    TV_PW="pass" \
+    TV_RELAY_PW="pass" \
+    TV_MAXRATE=0 \
+    TV_DELAY=0 \
+    SRCDS_TOKEN="" \
+    CS2_CFG_URL="" \
+    CS2_ADDITIONAL_ARGS=""
 
-RUN ln -sf /usr/games/steamcmd /usr/bin/steamcmd
+# Set permissions on STEAMAPPDIR
+#   Permissions may need to be reset if persistent volume mounted
+RUN set -x \
+        && chown -R "${USER}:${USER}" "${STEAMAPPDIR}" \
+        && chmod 0777 "${STEAMAPPDIR}"
 
-RUN apt-get -qq update \
-    && apt-get -qq install -y --no-install-recommends --no-install-suggests \
-        ca-certificates \
-        wget \
-        lib32stdc++6 \
-        unzip \
-        rsync \
-    && su user -c  \
-       "mkdir $cs2_DIR \
-       && bash $HOME_DIR/server-update.sh"
+# Switch to user
+USER ${USER}
 
-# starting from GET5 v0.13, the veto system uses in game chat instead of a handy menu...
-ENV METAMOD_URL=https://mms.alliedmods.net/mmsdrop/1.12/mmsource-1.12.0-git1167-linux.tar.gz \
-    SOURCEMOD_URL=https://sm.alliedmods.net/smdrop/1.12/sourcemod-1.12.0-git7017-linux.tar.gz \
-    STEAMWORKS_URL=https://github.com/KyleSanderson/SteamWorks/releases/download/1.2.3c/package-lin.tgz \
-    GET5_URL=https://github.com/splewis/get5/releases/download/v0.12.1/get5-v0.12.1.tar.gz
+WORKDIR ${HOMEDIR}
 
-RUN su user -c  \
-       "wget -q -O - $METAMOD_URL | tar -xz -C $cs2_DIR/cs2 \
-       && wget -q -O - $SOURCEMOD_URL | tar -xz -C $cs2_DIR/cs2 \
-       && wget -q -O get5.tar.gz $GET5_URL \
-       && tar -xzf get5.tar.gz \
-       && rsync -aq addons/ $cs2_DIR/cs2/addons \
-       && rsync -aq cfg/ $cs2_DIR/cs2/cfg \
-       && rm -rf addons cfg get5.zip"
+# Create App Dir
+RUN mkdir -p "${STEAMAPPDIR}" || true
 
-# steamworks:
-RUN su user -c \
-      "wget -q -O steamworks.tar.gz $STEAMWORKS_URL \
-      && mkdir steamworks \
-      && tar -xzf steamworks.tar.gz -C steamworks \
-      && rsync -aq steamworks/package/addons/ $cs2_DIR/cs2/addons"
+# Download Updates
+RUN bash "${STEAMCMDDIR}/steamcmd.sh" +force_install_dir "${STEAMAPPDIR}" \
+				+login anonymous \
+				+app_update "${STEAMAPPID}" \
+				+quit
 
-RUN apt install gdb -y
+USER root
 
-RUN apt-get -qq purge -y unzip rsync wget \
-    && apt-get -qq autoremove -y \
-    && apt-get -qq clean \
-    && rm -rf /var/lib/apt/lists/*
+COPY etc/entry.sh "${HOMEDIR}/entry.sh"
+COPY etc/server.cfg "/etc/server.cfg"
+COPY etc/pre.sh "/etc/pre.sh"
+COPY etc/post.sh "/etc/post.sh"
 
-######################
-# COPY LAUNCH SCRIPT #
-######################
-COPY --chown=user --chmod=755 server-scripts/server-launch.sh $HOME_DIR/
+# Add entry script
+RUN chmod +x "${HOMEDIR}/entry.sh" \
+	&& chown -R "${USER}:${USER}" "${HOMEDIR}/entry.sh" "${STEAMAPPDIR}"
 
-################
-# COPY CONFIGS #
-################
-COPY --chown=user cfg/* $cs2_DIR/cs2/cfg/
+# Switch to user
+USER ${USER}
 
-# FORCE MANUAL UPDATE IN CONTAINER, simply increment the number on the echo command, this is not very clever or a good solution but, well... it works
-RUN su user -c "bash $HOME_DIR/server-update.sh" && echo "1"
-
-RUN echo '"STEAM_0:0:64160074" "99:z"' >> $cs2_DIR/cs2/addons/sourcemod/configs/admins_simple.ini \
-    && echo '"STEAM_0:1:124584389" "99:z"' >> $cs2_DIR/cs2/addons/sourcemod/configs/admins_simple.ini
-
-############
-# RUN cs2 #
-############
-ENV UPDATE_ON_LAUNCH=0
-USER user
-CMD ["bash", "server-launch.sh"]
+CMD ["bash", "entry.sh"]
